--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja do Dev – Consoles, PCs, Acessórios e Ofertas Imperdíveis</title>
 </head>
+
 <body>
+    <header>
+        <div class="logo"></div>
+
+        <form class="search"></form>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Mais Vendidos</a></li>
+            <li><a href="#">Cadeiras</a></li>
+            <li><a href="#">Headset</a></li>
+            <li><a href="#">Microfone</a></li>
+            <li><a href="#">Mouse</a></li>
+            <li><a href="#">PC Gamer</a></li>
+            <li><a href="#">Teclados</a></li>
+            <li><a href="#">Video Game</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="hero"></section>
+
+        <section class="ofertas">
+            <h2>Ofertas</h2>
+            <ul>
+                <li>
+                    <article></article>
+                </li>
+            </ul>
+        </section>
+
+        <section class="mais-vendidos">
+            <h2>Mais Vendidos</h2>
+            <ul>
+                <li>
+                    <article></article>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer></footer>
     
 </body>
+
 </html>
