--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <div class="logo"></div>
 
         <form class="search"></form>
+
+        <div class="user-actions">
+            <a href="#" class="login">Entrar / Cadastrar</a>
+
+            <a href="#" class="cart" aria-label="Carrinho de compras">
+                🛒
+                <span class="cart-count" aria-live="polite">0</span>
+            </a>
+        </div>
     </header>
 
     <nav>
@@ -51,7 +60,7 @@
     </main>
 
     <footer></footer>
-    
+
 </body>
 
 </html>
