--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo-contorno.png" alt="imagen-logo">
+            <img src="./images/logo-loja-do-dev.png" alt="imagen-logo">
         </div>
 
         <form class="search">
@@ -43,8 +43,8 @@
         </div>
     </header>
 
-    <nav>
-        <ul>
+    <nav class="categorias">
+        <ul class="lista-categorias">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Mais Vendidos</a></li>
             <li><a href="#">Cadeiras</a></li>
