--- a/categoria.html
+++ b/categoria.html
@@ -102,7 +102,23 @@
     </main>
 
     <footer>
-        <p>© 2026 Loja do Dev. Todos os direitos reservados.</p>
+        <div class="footer-container">
+
+            <p class="footer-text">
+                Projeto desenvolvido por
+                <strong>Luana Letéia</strong> e
+                <strong>Hugo Batista</strong>
+            </p>
+
+            <div class="footer-social">
+                <a href="" target="_blank" aria-label="LinkedIn Luana Letéia">
+                    <img src="" alt="LinkedIn Luana Letéia">
+                </a>
+
+                <a href="" target="_blank" aria-label="LinkedIn Hugo Batista">
+                    <img src="" alt="LinkedIn Hugo Batista">
+                </a>
+            </div>
     </footer>
 
 </body>
