--- a/index.html
+++ b/index.html
@@ -79,7 +79,27 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+
+            <p class="footer-text">
+                Projeto desenvolvido por
+                <strong>Luana Letéia</strong> e
+                <strong>Hugo Batista</strong>
+            </p>
+
+            <div class="footer-social">
+                <a href="" target="_blank" aria-label="LinkedIn Luana Letéia">
+                    <img src="" alt="LinkedIn Luana Letéia">
+                </a>
+
+                <a href="" target="_blank" aria-label="LinkedIn Hugo Batista">
+                    <img src="" alt="LinkedIn Hugo Batista">
+                </a>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 
