Adicionado Página de Categorias
Adicionei o arquivo categoria.html onde terá os produtos separados de acordo com suas categorias.

--- a/categoria.html
+++ b/categoria.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
 
     <title>Categoria – Loja do Dev</title>
 </head>
@@ -72,7 +73,7 @@
                 <li>
                     <article class="produto-card">
                         <img src="./images/produto-exemplo.png" alt="Produto">
-                        <h3>Cadeira Gamer Pro</h3>
+                        <h3>Cadeira Gamer Azul</h3>
                         <p class="preco">R$ 1.299,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
                     </article>
@@ -81,7 +82,7 @@
                 <li>
                     <article class="produto-card">
                         <img src="./images/produto-exemplo.png" alt="Produto">
-                        <h3>Cadeira Gamer Xtreme</h3>
+                        <h3>Cadeira Gamer Verde</h3>
                         <p class="preco">R$ 1.599,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
                     </article>
@@ -90,7 +91,7 @@
                 <li>
                     <article class="produto-card">
                         <img src="./images/produto-exemplo.png" alt="Produto">
-                        <h3>Cadeira Gamer Elite</h3>
+                        <h3>Cadeira Gamer Vermelha</h3>
                         <p class="preco">R$ 1.899,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
                     </article>
