--- a/categoria.html
+++ b/categoria.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    
+
     <link rel="stylesheet" href="style.css">
 
     <title>Categoria – Loja do Dev</title>
@@ -72,7 +72,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="Produto">
+                        <img src="./images/produto-exemplo.png" alt="cadeira-azul">
                         <h3>Cadeira Gamer Azul</h3>
                         <p class="preco">R$ 1.299,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -81,7 +81,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="Produto">
+                        <img src="./images/produto-exemplo.png" alt="cadeiras-verde">
                         <h3>Cadeira Gamer Verde</h3>
                         <p class="preco">R$ 1.599,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -90,7 +90,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="Produto">
+                        <img src="./images/produto-exemplo.png" alt="cadeira-vermelha">
                         <h3>Cadeira Gamer Vermelha</h3>
                         <p class="preco">R$ 1.899,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -100,7 +100,7 @@
             </ul>
         </section>
 
-    </main>
+           </main>
 
     <footer>
         <div class="footer-container">
