--- a/index.html
+++ b/index.html
@@ -49,38 +49,22 @@
 
     <nav class="categorias">
         <ul class="lista-categorias">
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Mais Vendidos</a></li>
-            <li><a href="#">Cadeiras</a></li>
-            <li><a href="#">Headset</a></li>
-            <li><a href="#">Microfone</a></li>
-            <li><a href="#">Mouse</a></li>
-            <li><a href="#">PC Gamer</a></li>
-            <li><a href="#">Teclados</a></li>
-            <li><a href="#">Video Game</a></li>
+            <li><a href="index.html">Ofertas</a></li>
+            <li><a href="index.html">Mais Vendidos</a></li>
+            <li><a href="categoria.html">Cadeiras</a></li>
+            <li><a href="headset.html">Headset</a></li>
+            <li><a href="categoria.html">Microfone</a></li>
+            <li><a href="categoria.html">Mouse</a></li>
+            <li><a href="categoria.html">PC Gamer</a></li>
+            <li><a href="categoria.html">Teclados</a></li>
+            <li><a href="categoria.html">Video Game</a></li>
         </ul>
     </nav>
 
     <main>
         <section class="hero"></section>
 
-        <section class="ofertas">
-            <h2>Ofertas</h2>
-            <ul>
-                <li>
-                    <article></article>
-                </li>
-            </ul>
-        </section>
-
-        <section class="mais-vendidos">
-            <h2>Mais Vendidos</h2>
-            <ul>
-                <li>
-                    <article></article>
-                </li>
-            </ul>
-        </section>
+        <section class="ofertas"></section>
     </main>
 
     <footer>
