--- a/categoria.html
+++ b/categoria.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Categoria – Loja do Dev</title>
@@ -72,7 +73,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="cadeira-azul">
+                        <img src="./images/produto-exemplo.png" alt="Produto">
                         <h3>Cadeira Gamer Azul</h3>
                         <p class="preco">R$ 1.299,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -81,7 +82,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="cadeiras-verde">
+                        <img src="./images/produto-exemplo.png" alt="Produto">
                         <h3>Cadeira Gamer Verde</h3>
                         <p class="preco">R$ 1.599,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -90,7 +91,7 @@
 
                 <li>
                     <article class="produto-card">
-                        <img src="./images/produto-exemplo.png" alt="cadeira-vermelha">
+                        <img src="./images/produto-exemplo.png" alt="Produto">
                         <h3>Cadeira Gamer Vermelha</h3>
                         <p class="preco">R$ 1.899,00</p>
                         <a href="produto.html" class="btn-detalhes">Ver detalhes</a>
@@ -100,7 +101,7 @@
             </ul>
         </section>
 
-           </main>
+    </main>
 
     <footer>
         <div class="footer-container">
