--- a/categoria.html
+++ b/categoria.html
@@ -103,7 +103,6 @@
 
             </li>
 
-
             <li>
 
                 <article class="produto-card">
@@ -122,6 +121,24 @@
 
             </li>
 
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/cadeiras/cadeira-azul.png" alt="Cadeira Gamer Azul">
+
+                    <h3>Cadeira Gamer Azul</h3>
+
+                    <p class="preco">R$ 1.599,00</p>
+
+                    <a href="produto.html?id=5" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
 
         </ul>
 
@@ -132,17 +149,43 @@
 
 <footer>
 
-    <div class="footer-container">
+        <div class="footer-container">
 
-        <p class="footer-text">
-            Projeto desenvolvido por
-            <strong>Luana Letéia</strong> e
-            <strong>Hugo Batista</strong>
-        </p>
+            <div class="footer-info">
 
-    </div>
+                <p class="footer-text">
+                    Projeto desenvolvido por
+                    <strong>Luana Letéia</strong> e
+                    <strong>Hugo Batista</strong>
+                </p>
 
-</footer>
+                <p class="footer-copy">
+                    © 2026 Loja do Dev — Todos os direitos reservados
+                </p>
+
+            </div>
+
+
+            <div class="footer-social">
+
+                <a href="https://www.linkedin.com/in/luanaleteia" target="_blank" rel="noopener noreferrer"
+                    aria-label="LinkedIn Luana Letéia">
+
+                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Luana Letéia">
+
+                </a>
+
+                <a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+
+                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
+
+                </a>
+
+            </div>
+
+        </div>
+
+    </footer>
 
 <script>
 
