--- a/index.html
+++ b/index.html
@@ -18,144 +18,171 @@
 
 <body>
 
-<header>
+    <header>
 
-    <div class="logo">
-        <img src="./images/logo-loja-do-dev.png" alt="Logo Loja do Dev">
-    </div>
+        <div class="logo">
+            <img src="./images/logo-loja-do-dev.png" alt="Logo Loja do Dev">
+        </div>
 
-    <form class="search">
-        <input type="text" placeholder="O que você está procurando?">
-        <button type="submit">🔍</button>
-    </form>
+        <form class="search">
+            <input type="text" placeholder="O que você está procurando?">
+            <button type="submit">🔍</button>
+        </form>
 
-    <div class="user-actions">
+        <div class="user-actions">
 
-        <a href="#" class="login">
-            👤
-            Minha Conta
-        </a>
+            <a href="#" class="login">
+                👤
+                Minha Conta
+            </a>
 
-        <a href="#" class="favorites">
-            ❤️
-            Favoritos
-        </a>
+            <a href="#" class="favorites">
+                ❤️
+                Favoritos
+            </a>
 
-        <a href="#" class="cart">
-            🛒
-            Carrinho
-        </a>
+            <a href="#" class="cart">
+                🛒
+                Carrinho
+            </a>
 
-    </div>
+        </div>
 
-</header>
-
-
-<nav class="categorias">
-
-    <ul class="lista-categorias">
-
-        <li><a href="categorias.html?cat=ofertas">Ofertas</a></li>
-
-        <li><a href="categorias.html?cat=mais-vendidos">Mais Vendidos</a></li>
-
-        <li><a href="categorias.html?cat=cadeiras">Cadeiras</a></li>
-
-        <li><a href="categorias.html?cat=headset">Headset</a></li>
-
-        <li><a href="categorias.html?cat=microfone">Microfone</a></li>
-
-        <li><a href="categorias.html?cat=mouse">Mouse</a></li>
-
-        <li><a href="categorias.html?cat=pc-gamer">PC Gamer</a></li>
-
-        <li><a href="categorias.html?cat=teclado">Teclados</a></li>
-
-        <li><a href="categorias.html?cat=videogame">Video Game</a></li>
-
-    </ul>
-
-</nav>
+    </header>
 
 
-<main>
+    <nav class="categorias">
 
-    <section class="hero"></section>
+        <ul class="lista-categorias">
 
+            <li><a href="categorias.html?cat=ofertas">Ofertas</a></li>
 
-    <!-- OFERTAS -->
+            <li><a href="categorias.html?cat=mais-vendidos">Mais Vendidos</a></li>
 
-    <section class="ofertas">
+            <li><a href="categorias.html?cat=cadeiras">Cadeiras</a></li>
 
-        <h2>Ofertas</h2>
+            <li><a href="categorias.html?cat=headset">Headset</a></li>
 
-        <ul>
+            <li><a href="categorias.html?cat=microfone">Microfone</a></li>
 
-            <li>
-                <article>
+            <li><a href="categorias.html?cat=mouse">Mouse</a></li>
 
-                    <img src="./images/produtos/cadeiras/cadeira-azul.png" alt="Cadeira Gamer Azul">
+            <li><a href="categorias.html?cat=pc-gamer">PC Gamer</a></li>
 
-                    <h3>Cadeira Gamer Azul</h3>
+            <li><a href="categorias.html?cat=teclado">Teclados</a></li>
 
-                    <p>R$ 1.299,00</p>
-
-                    <a href="produto.html?id=1" class="btn-detalhes">
-                        Ver produto
-                    </a>
-
-                </article>
-            </li>
+            <li><a href="categorias.html?cat=videogame">Video Game</a></li>
 
         </ul>
 
-    </section>
+    </nav>
 
 
-    <!-- MAIS VENDIDOS -->
+    <main>
 
-    <section class="mais-vendidos">
-
-        <h2>Mais Vendidos</h2>
-
-        <ul>
-
-            <li>
-                <article>
-
-                    <img src="./images/produtos/headset/headset-preto.png" alt="Headset Gamer Pro">
-
-                    <h3>Headset Gamer Pro</h3>
-
-                    <p>R$ 499,00</p>
-
-                    <a href="produto.html?id=2" class="btn-detalhes">
-                        Ver produto
-                    </a>
-
-                </article>
-            </li>
-
-        </ul>
-
-    </section>
-
-</main>
+        <section class="hero"></section>
 
 
-<footer>
+        <!-- OFERTAS -->
 
-    <div class="footer-container">
+        <section class="ofertas">
 
-        <p class="footer-text">
-            Projeto desenvolvido por
-            <strong>Luana Letéia</strong> e
-            <strong>Hugo Batista</strong>
-        </p>
+            <h2>Ofertas</h2>
 
-    </div>
+            <ul>
 
-</footer>
+                <li>
+                    <article>
+
+                        <img src="./images/produtos/cadeiras/cadeira-azul.png" alt="Cadeira Gamer Azul">
+
+                        <h3>Cadeira Gamer Azul</h3>
+
+                        <p>R$ 1.299,00</p>
+
+                        <a href="produto.html?id=1" class="btn-detalhes">
+                            Ver produto
+                        </a>
+
+                    </article>
+                </li>
+
+            </ul>
+
+        </section>
+
+
+        <!-- MAIS VENDIDOS -->
+
+        <section class="mais-vendidos">
+
+            <h2>Mais Vendidos</h2>
+
+            <ul>
+
+                <li>
+                    <article>
+
+                        <img src="./images/produtos/headset/headset-preto.png" alt="Headset Gamer Pro">
+
+                        <h3>Headset Gamer Pro</h3>
+
+                        <p>R$ 499,00</p>
+
+                        <a href="produto.html?id=2" class="btn-detalhes">
+                            Ver produto
+                        </a>
+
+                    </article>
+                </li>
+
+            </ul>
+
+        </section>
+
+    </main>
+
+
+    <footer>
+
+        <div class="footer-container">
+
+            <div class="footer-info">
+
+                <p class="footer-text">
+                    Projeto desenvolvido por
+                    <strong>Luana Letéia</strong> e
+                    <strong>Hugo Batista</strong>
+                </p>
+
+                <p class="footer-copy">
+                    © 2026 Loja do Dev — Todos os direitos reservados
+                </p>
+
+            </div>
+
+
+            <div class="footer-social">
+
+                <a href="https://www.linkedin.com/in/luanaleteia" target="_blank" rel="noopener noreferrer"
+                    aria-label="LinkedIn Luana Letéia">
+
+                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Luana Letéia">
+
+                </a>
+
+                <a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+
+                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
+
+                </a>
+
+            </div>
+
+        </div>
+
+    </footer>
 
 </body>
+
 </html>
