Atualização arquivos HTML
Atualizando os arquivos HTML, adicionando imagens de mais produtos.

--- a/categoria.html
+++ b/categoria.html
@@ -45,10 +45,6 @@
 
     <ul class="lista-categorias">
 
-        <li><a href="categorias.html?cat=ofertas">Ofertas</a></li>
-
-        <li><a href="categorias.html?cat=mais-vendidos">Mais Vendidos</a></li>
-
         <li><a href="categorias.html?cat=cadeiras">Cadeiras</a></li>
 
         <li><a href="categorias.html?cat=headset">Headset</a></li>
@@ -139,6 +135,60 @@
 
             </li>
 
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/headset/headset-branco.png" alt="Headset Branco">
+
+                    <h3>Headset Branco</h3>
+
+                    <p class="preco">R$ 499,00</p>
+
+                    <a href="produto.html?id=5" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/headset/headset-preto.png" alt="Headset Preto">
+
+                    <h3>Headset Preto</h3>
+
+                    <p class="preco">R$ 499,00</p>
+
+                    <a href="produto.html?id=5" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/microfone/microfone.png" alt="Microfone">
+
+                    <h3>Microfone</h3>
+
+                    <p class="preco">R$ 189,00</p>
+
+                    <a href="produto.html?id=6" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
 
         </ul>
 
@@ -175,7 +225,7 @@
 
                 </a>
 
-                <a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+                <a href="https://www.linkedin.com/in/hugo-batista89" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
 
                     <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
 
