--- a/index.html
+++ b/index.html
@@ -55,10 +55,6 @@
 
         <ul class="lista-categorias">
 
-            <li><a href="categorias.html?cat=ofertas">Ofertas</a></li>
-
-            <li><a href="categorias.html?cat=mais-vendidos">Mais Vendidos</a></li>
-
             <li><a href="categorias.html?cat=cadeiras">Cadeiras</a></li>
 
             <li><a href="categorias.html?cat=headset">Headset</a></li>
@@ -171,7 +167,7 @@
 
                 </a>
 
-                <a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+                <a href="https://www.linkedin.com/in/hugo-batista89" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
 
                     <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
 
