--- a/categoria.html
+++ b/categoria.html
@@ -189,6 +189,168 @@
 
             </li>
 
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/mouse/mouse-azul.png" alt="Mouse Azul">
+
+                    <h3>Mouse Azul</h3>
+
+                    <p class="preco">R$ 250,00</p>
+
+                    <a href="produto.html?id=6" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/mouse/mouse-rainbow.png" alt="Mouse Rainbow">
+
+                    <h3>Mouse Rainbow</h3>
+
+                    <p class="preco">R$ 300,00</p>
+
+                    <a href="produto.html?id=7" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/mouse/mouse-verde.png" alt="Mouse Verde">
+
+                    <h3>Mouse Verde</h3>
+
+                    <p class="preco">R$ 250,00</p>
+
+                    <a href="produto.html?id=8" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/pc-gamer/cpu-gamer.png" alt="CPU Gamer">
+
+                    <h3>CPU Gamer</h3>
+
+                    <p class="preco">R$ 7.000,00</p>
+
+                    <a href="produto.html?id=9" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/pc-gamer/notebook-gamer.png" alt="Notebook Gamer">
+
+                    <h3>Notebook Gamer</h3>
+
+                    <p class="preco">R$ 4.800,00</p>
+
+                    <a href="produto.html?id=10" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/teclados/teclado-mecanico-branco.png" alt="Teclado Branco">
+
+                    <h3>Teclado Branco</h3>
+
+                    <p class="preco">R$ 200,00</p>
+
+                    <a href="produto.html?id=10" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/teclados/teclado-mecanico-preto.png" alt="Teclado Preto">
+
+                    <h3>Teclado Preto</h3>
+
+                    <p class="preco">R$ 200,00</p>
+
+                    <a href="produto.html?id=11" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/video-game/ps5.png" alt="PS5">
+
+                    <h3>PS5</h3>
+
+                    <p class="preco">R$ 3.400,00</p>
+
+                    <a href="produto.html?id=12" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/video-game/jogos.png" alt="Jogos PS5">
+
+                    <h3>JogosPS5</h3>
+
+                    <p class="preco">R$ 160,00</p>
+
+                    <a href="produto.html?id=13" class="btn-detalhes">
+                        Ver detalhes
+                    </a>
+
+                </article>
+
+            </li>
+
 
         </ul>
 
