--- a/index.html
+++ b/index.html
@@ -141,43 +141,45 @@
 
     <footer>
 
-        <div class="footer-container">
+    <div class="footer-container">
 
-            <div class="footer-info">
+        <div class="footer-info">
 
-                <p class="footer-text">
-                    Projeto desenvolvido por
-                    <strong>Luana Letéia</strong> e
-                    <strong>Hugo Batista</strong>
-                </p>
+            <p class="footer-text">
+                Projeto desenvolvido por:
+            </p>
 
-                <p class="footer-copy">
-                    © 2026 Loja do Dev — Todos os direitos reservados
-                </p>
+            <div class="footer-devs">
 
-            </div>
+                <!-- Luana -->
+                <a href="https://www.linkedin.com/in/luanaleteia"
+                   target="_blank" class="footer-link">
 
-
-            <div class="footer-social">
-
-                <a href="https://www.linkedin.com/in/luanaleteia" target="_blank" rel="noopener noreferrer"
-                    aria-label="LinkedIn Luana Letéia">
-
-                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Luana Letéia">
+                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Luana Letéia">
+                    <span>Luana Letéia</span>
 
                 </a>
 
-                <a href="https://www.linkedin.com/in/hugo-batista89" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+                <!-- Hugo -->
+                <a href="https://www.linkedin.com/in/hugo-batista89"
+                   target="_blank" class="footer-link">
 
-                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
+                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Hugo Batista">
+                    <span>Hugo Batista</span>
 
                 </a>
 
             </div>
+
+            <p class="footer-copy">
+                © 2026 Loja do Dev — Todos os direitos reservados
+            </p>
 
         </div>
 
-    </footer>
+    </div>
+
+</footer>
 
 </body>
 
