--- a/categoria.html
+++ b/categoria.html
@@ -145,7 +145,7 @@
 
                     <p class="preco">R$ 499,00</p>
 
-                    <a href="produto.html?id=5" class="btn-detalhes">
+                    <a href="produto.html?id=6" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -163,7 +163,7 @@
 
                     <p class="preco">R$ 499,00</p>
 
-                    <a href="produto.html?id=5" class="btn-detalhes">
+                    <a href="produto.html?id=7" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -181,7 +181,7 @@
 
                     <p class="preco">R$ 189,00</p>
 
-                    <a href="produto.html?id=6" class="btn-detalhes">
+                    <a href="produto.html?id=8" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -199,7 +199,7 @@
 
                     <p class="preco">R$ 250,00</p>
 
-                    <a href="produto.html?id=6" class="btn-detalhes">
+                    <a href="produto.html?id=9" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -217,7 +217,7 @@
 
                     <p class="preco">R$ 300,00</p>
 
-                    <a href="produto.html?id=7" class="btn-detalhes">
+                    <a href="produto.html?id=10" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -235,7 +235,7 @@
 
                     <p class="preco">R$ 250,00</p>
 
-                    <a href="produto.html?id=8" class="btn-detalhes">
+                    <a href="produto.html?id=11" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -253,7 +253,7 @@
 
                     <p class="preco">R$ 7.000,00</p>
 
-                    <a href="produto.html?id=9" class="btn-detalhes">
+                    <a href="produto.html?id=12" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -271,7 +271,7 @@
 
                     <p class="preco">R$ 4.800,00</p>
 
-                    <a href="produto.html?id=10" class="btn-detalhes">
+                    <a href="produto.html?id=13" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -289,7 +289,7 @@
 
                     <p class="preco">R$ 200,00</p>
 
-                    <a href="produto.html?id=10" class="btn-detalhes">
+                    <a href="produto.html?id=14" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -307,7 +307,7 @@
 
                     <p class="preco">R$ 200,00</p>
 
-                    <a href="produto.html?id=11" class="btn-detalhes">
+                    <a href="produto.html?id=15" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -325,7 +325,7 @@
 
                     <p class="preco">R$ 3.400,00</p>
 
-                    <a href="produto.html?id=12" class="btn-detalhes">
+                    <a href="produto.html?id=16" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -343,7 +343,7 @@
 
                     <p class="preco">R$ 160,00</p>
 
-                    <a href="produto.html?id=13" class="btn-detalhes">
+                    <a href="produto.html?id=17" class="btn-detalhes">
                         Ver detalhes
                     </a>
 
@@ -361,43 +361,45 @@
 
 <footer>
 
-        <div class="footer-container">
+    <div class="footer-container">
 
-            <div class="footer-info">
+        <div class="footer-info">
 
-                <p class="footer-text">
-                    Projeto desenvolvido por
-                    <strong>Luana Letéia</strong> e
-                    <strong>Hugo Batista</strong>
-                </p>
+            <p class="footer-text">
+                Projeto desenvolvido por:
+            </p>
 
-                <p class="footer-copy">
-                    © 2026 Loja do Dev — Todos os direitos reservados
-                </p>
+            <div class="footer-devs">
 
-            </div>
+                <!-- Luana -->
+                <a href="https://www.linkedin.com/in/luanaleteia"
+                   target="_blank" class="footer-link">
 
-
-            <div class="footer-social">
-
-                <a href="https://www.linkedin.com/in/luanaleteia" target="_blank" rel="noopener noreferrer"
-                    aria-label="LinkedIn Luana Letéia">
-
-                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Luana Letéia">
+                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Luana Letéia">
+                    <span>Luana Letéia</span>
 
                 </a>
 
-                <a href="https://www.linkedin.com/in/hugo-batista89" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Hugo Batista">
+                <!-- Hugo -->
+                <a href="https://www.linkedin.com/in/hugo-batista89"
+                   target="_blank" class="footer-link">
 
-                    <img src="./images/icons/linkedin.svg" alt="LinkedIn Hugo Batista">
+                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Hugo Batista">
+                    <span>Hugo Batista</span>
 
                 </a>
 
             </div>
+
+            <p class="footer-copy">
+                © 2026 Loja do Dev — Todos os direitos reservados
+            </p>
 
         </div>
 
-    </footer>
+    </div>
+
+</footer>
 
 <script>
 
